--- a/package.json
+++ b/package.json
@@ -3,6 +3,14 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
+  "dependencies": {
+    "@types/react-redux": "^7.1.9",
+    "react": "^16.13.1",
+    "react-dom": "^16.13.1",
+    "react-redux": "^7.2.0",
+    "redux": "^4.0.5",
+    "typescript": "^3.9.3"
+  },
   "scripts": {
     "test": "echo \"No Tests defined\"",
     "build": "tsc",
@@ -17,7 +25,7 @@
   },
   "keywords": [
     "react",
-    "routing"
+    "redux"
   ],
   "author": "Felix Mumme",
   "license": "ISC",
