--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.1",
   "description": "",
   "main": "index.js",
+  "types": "index.d.ts",
   "dependencies": {
     "@types/react-redux": "^7.1.9",
     "react": "^16.13.1",
