--- a/package.json
+++ b/package.json
@@ -2,8 +2,8 @@
   "name": "react-redux-action-service",
   "version": "1.0.2",
   "description": "",
-  "main": "index.js",
-  "types": "index.d.ts",
+  "main": "lib/index.js",
+  "types": "lib/index.d.ts",
   "dependencies": {
     "@types/react-redux": "^7.1.9",
     "react": "^16.13.1",
